--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -29,9 +29,11 @@
   background-image: $gradient-accent;
   box-shadow: $shadow-button;
 
-  &:hover:not(:disabled) {
-    box-shadow: $shadow-button-hover;
-    filter: brightness(0.92);
+  @include can-hover {
+    &:hover:not(:disabled) {
+      box-shadow: $shadow-button-hover;
+      filter: brightness(0.92);
+    }
   }
 
   &:active:not(:disabled) {
@@ -43,8 +45,10 @@
   color: $color-text;
   @include interactive-surface;
 
-  &:hover:not(:disabled) {
-    background: $color-surface-hover;
+  @include can-hover {
+    &:hover:not(:disabled) {
+      background: $color-surface-hover;
+    }
   }
 }
 
@@ -66,8 +70,10 @@
   color: $color-text;
   @include interactive-surface;
 
-  &:hover {
-    background: $color-surface-hover;
+  @include can-hover {
+    &:hover {
+      background: $color-surface-hover;
+    }
   }
 
   &:focus-visible {
@@ -100,9 +106,11 @@
   line-height: 1;
   transition: transform 150ms ease, box-shadow 150ms ease;
 
-  &:hover {
-    box-shadow: $shadow-button-hover;
-    transform: scale(1.1);
+  @include can-hover {
+    &:hover {
+      box-shadow: $shadow-button-hover;
+      transform: scale(1.1);
+    }
   }
 
   &:active {
