--- a/src/styles/components/_data-menu.scss
+++ b/src/styles/components/_data-menu.scss
@@ -63,8 +63,10 @@
   align-items: center;
   gap: 0.5rem;
 
-  &:hover {
-    background: $color-surface-hover;
+  @include can-hover {
+    &:hover {
+      background: $color-surface-hover;
+    }
   }
 
   &:focus-visible {
