--- a/src/styles/components/_views.scss
+++ b/src/styles/components/_views.scss
@@ -88,8 +88,10 @@
   align-items: center;
   justify-content: center;
 
-  &:hover {
-    background: $color-surface-hover;
+  @include can-hover {
+    &:hover {
+      background: $color-surface-hover;
+    }
   }
 
   &:focus-visible {
@@ -127,8 +129,10 @@
   display: inline-flex;
   align-items: center;
 
-  &:hover {
-    background: $color-surface-hover;
+  @include can-hover {
+    &:hover {
+      background: $color-surface-hover;
+    }
   }
 
   &:focus-visible {
